apply css feature

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
         <div class="go">
             <a href="#goo" style="font-size: x-large;">&uarr; </a></div>
         <h1 class="headone">Rahmeh Daraghmeh </h1>
-        <h3>Full Stack Developer| Designer | programmer</h3>
+        <h3>Full Stack Developer | Designer | programmer</h3>
         <div class="nav">
-            <a class="rect" href="#about">About Me</a>
-            <a class="rect" href="#skills">Skills</a>
-            <a class="rect" href="#project">Projects</a>
-            <a class="rect" href="#contact">Contact</a>
+            <ul>
+                <li class="list"><a class="rect" href="#about">About Me</a></li>
+                <li class="list"><a class="rect" href="#skills">Skills</a></li>
+                <li class="list"> <a class="rect" href="#project">Projects</a></li>
+                <li class="list"><a class="rect" href="#contact">Contact</a></li>
+            </ul>
         </div>
 
     </div>
